Fixed an important highlighting bug when multiple whitespace characters immediately precede highlight (I think I was compressing multiple whitespace characters at one time, which would have concealed the error) Work towards OJS integration with latest release

--- a/trunk/demo/www/index.css
+++ b/trunk/demo/www/index.css
@@ -265,15 +265,16 @@ ol#articles {
 }
 
 .hentry span.annotation-user-count {
+	cursor: pointer;
 	text-align: center;
-	width: 3ex;
 	padding: .25ex;
 	background: #6666ff;
 	font-family: sans-serif;
 	font-weight: bold;
 	color: white;
-	position: absolute;
-	left: -2.5em;
+	position: relative;
+	right: 3ex;
+	margin-right: -1.5ex;
 }
 
 .hentry .smart-copy {
